# Marino-obsessed

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
notebooks/: app.py  notebook.py  vault_app.py
plugins/: backlinks.toml  canvas.toml  graph-view.toml
scripts/: build_wasm.py
skills/: add-plugin.md  add-todo.md  create-note.md  query-vault.md  sync-vault.md
src/vault/: __init__.py  backlinks.py  canvas.py  db.py  graph.py  index.py  note.py  parser.py  plugin.py  skills.py  todos.py
src/vault/sync/: __init__.py  base.py  cloudflare.py  duckdb_lake.py
tests/: test_sample.py
tests/test_ui/: conftest.py  test_canvas_html.py  test_graph_html.py  test_vault_app_e2e.py
tests/test_vault/: test_db.py  test_index.py  test_parser.py  test_plugin.py  test_skills.py  test_todos.py
vault/: canvas-guide.md  getting-started.md  index.md  plugin-system.md  sync-guide.md
